# SemCal

./: .gitignore  AXIOMS.md  CMakeLists.txt  COVERAGE.md  README.md  SemX.md  build.sh  commit.sh
docs/: design.md  instantiation.md  solver_patterns.md
examples/: CMakeLists.txt  cad_refute_first.cpp  lp_guided_refine.cpp
examples/counting/: CMakeLists.txt  counting_solver.cpp
examples/omt/: CMakeLists.txt  omt_solver.cpp
examples/pipelines/: cad_refute_first.cpp  lp_guided_refine.cpp
examples/sat/: CMakeLists.txt  sat_solver.cpp  smt_solver.cpp
include/: semcal.h  semx.h
include/backends/: backend_capability.h  cad_backend.h  cad_stub.h  icp_backend.h  lp_backend.h  lp_stub.h
include/core/: formula.h  model.h
include/domain/: abstract_domain.h  concretization.h  galois.h
include/operators/: decompose.h  decompose_cad.h  infeasible.h  infeasible_cad.h  infeasible_lp.h  lift.h  operator.h  project.h  refine.h  relax.h  restrict.h
include/orchestration/: pipeline.h  strategy.h
include/semcal/backends/: backend_capability.h  cad_backend.h  icp_backend.h  lp_backend.h
include/semcal/core/: partial_model.h  semantics.h
include/semcal/domain/: concretization.h  galois.h  top_element.h
include/semcal/operators/: decompose.h  decompose_cad.h  infeasible.h  infeasible_cad.h  infeasible_lp.h  lift.h  operator.h  refine.h  relax.h  restrict.h  shadow.h
include/semcal/state/: semantic_state.h
include/semkernel/: kernel.h
include/semsearch/: search_engine.h
include/semsolver/: solver.h
include/semsolver/strategies/: pipeline.h  strategy.h
include/state/: semantic_state.h
include/util/: op_result.h  result.h
src/backends/: cad_backend.cpp  cad_stub.cpp  icp_backend.cpp  lp_backend.cpp  lp_stub.cpp
src/core/: formula.cpp  model.cpp  semantics.cpp
src/domain/: abstract_domain.cpp  concretization.cpp  galois.cpp  top_element.cpp
src/operators/: decompose.cpp  decompose_cad.cpp  infeasible.cpp  infeasible_cad.cpp  infeasible_lp.cpp  lift.cpp  project.cpp  refine.cpp  relax.cpp  restrict.cpp
src/orchestration/: pipeline.cpp  strategy.cpp
src/semcal/backends/: cad_backend.cpp  cad_stub.cpp  icp_backend.cpp  lp_backend.cpp  lp_stub.cpp
src/semcal/core/: formula.cpp  model.cpp  partial_model.cpp  semantics.cpp
src/semcal/domain/: abstract_domain.cpp  concretization.cpp  galois.cpp  top_element.cpp
src/semcal/operators/: decompose.cpp  decompose_cad.cpp  infeasible.cpp  infeasible_cad.cpp  infeasible_lp.cpp  lift.cpp  refine.cpp  relax.cpp  restrict.cpp  shadow.cpp
src/semcal/state/: semantic_state.cpp
src/semcal/util/: result.cpp
src/semkernel/: kernel.cpp
src/semsearch/: search_engine.cpp
src/semsolver/: solver.cpp
src/semsolver/strategies/: pipeline.cpp  strategy.cpp
src/state/: semantic_state.cpp
